--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,12 +1,30 @@
+body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  display: flex;
+}
+
+aside {
+  width: 20%;
+  height: 100vh;
+  box-sizing: border-box;
+  background: cornflowerblue;
+}
+
+main {
+  width: 80%;
+}
+
 header {
-    height: 100px;
-    width: 100%;
-    background: aliceblue;
-    display: flex;
-    justify-content: space-between;
+  height: 100px;
+  box-sizing: border-box;
+  background: aliceblue;
+  display: flex;
+  justify-content: space-between;
 }
 
 nav ul {
-    display: flex;
-    justify-content: flex-end;
+  display: flex;
+  justify-content: flex-end;
 }
