--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,6 +10,11 @@ aside {
   height: 100vh;
   box-sizing: border-box;
   background: cornflowerblue;
+  color: white;
+}
+
+div ul {
+  list-style-type: none;
 }
 
 main {
