feature:add somes items to product section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -137,3 +137,32 @@ header nav {
    height: 80px;
    border-radius: 100px;
 }
+
+
+section {
+   display: grid;
+   grid-template-columns: 1fr 300px;
+   background: gray;
+   height: auto;
+}
+section h3{
+   padding-left: 20px;
+}
+
+.projects_items {
+   background: gray;
+   width: 100%;
+   padding: 20px;
+}
+.projects_items {
+   display: grid;
+   grid-template-columns: 1fr 1fr;
+   gap: 20px;
+}
+
+.single_project {
+   background: gainsboro;
+   width: 100%;
+   padding: 10px;
+   box-sizing: border-box;
+}
