--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -142,27 +142,42 @@ header nav {
 section {
    display: grid;
    grid-template-columns: 1fr 300px;
-   background: gray;
+   background: rgb(173, 202, 209);
    height: auto;
 }
 section h3{
    padding-left: 20px;
 }
 
+
+/* projects and project items styles */
 .projects_items {
-   background: gray;
+   background: rgb(173, 202, 209);
    width: 100%;
    padding: 20px;
-}
-.projects_items {
    display: grid;
    grid-template-columns: 1fr 1fr;
    gap: 20px;
 }
 
 .single_project {
-   background: gainsboro;
+   background: white;
    width: 100%;
    padding: 10px;
    box-sizing: border-box;
+   box-shadow: 2px 2px 10px gray;
+   border-radius: 10px;
+   border-left: 10px solid rgb(0, 174, 255);
+}
+
+.content{
+   min-height: 100px;
+   color: grey;
+}
+
+.project_actions {
+   display: grid;
+   grid-template-columns: 1fr 30px 30px 30px;
+   justify-items: end;
+   gap: 5px;
 }
