--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,13 +1,5 @@
-@font-face {
-  font-family: 'Material Icons';
-  font-style: normal;
-  font-weight: 400;
-  src: url(https://example.com/MaterialIcons-Regular.eot); /* For IE6-8 */
-  src: local('Material Icons'),
-    local('MaterialIcons-Regular'),
-    url(https://example.com/MaterialIcons-Regular.woff2) format('woff2'),
-    url(https://example.com/MaterialIcons-Regular.woff) format('woff'),
-    url(https://example.com/MaterialIcons-Regular.ttf) format('truetype');
+* {
+  font-family: 'Raleway', sans-serif;
 }
 
 body {
@@ -19,8 +11,6 @@ body {
 }
 
 .vertical_links {
-  /* width: 20%; */
-  height: 100vh;
   box-sizing: border-box;
   background: rgb(2, 108, 170);
   color: white;
@@ -151,6 +141,10 @@ section h3{
 
 
 /* projects and project items styles */
+.projects h3 {
+   margin: 30px auto 5px 0px;
+   color: rgb(2, 108, 170);
+}
 .projects_items {
    background: rgb(173, 202, 209);
    width: 100%;
@@ -158,6 +152,8 @@ section h3{
    display: grid;
    grid-template-columns: 1fr 1fr;
    gap: 20px;
+   font-size: 14px;
+   line-height: 18px;
 }
 
 .single_project {
@@ -166,8 +162,14 @@ section h3{
    padding: 10px;
    box-sizing: border-box;
    box-shadow: 2px 2px 10px gray;
-   border-radius: 10px;
-   border-left: 10px solid rgb(0, 174, 255);
+   border-radius: 8px;
+   border-left: 10px solid rgb(2, 108, 170);
+}
+
+.single_project:hover {
+   box-shadow: 1px 1px 20px rgb(0, 84, 99);
+   background: aliceblue;
+   /* rgba(237, 255, 255, 0.87) */
 }
 
 .content{
@@ -180,4 +182,10 @@ section h3{
    grid-template-columns: 1fr 30px 30px 30px;
    justify-items: end;
    gap: 5px;
+   height: 35px;
+   max-height: 35px;
+}
+
+.project_actions img:hover {
+   width: 32px;
 }
