--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -67,6 +67,8 @@ header nav {
    width: 400px;
    display: grid;
    grid-template-columns: 40px 1fr;
+   grid-template-rows: 30px;
+   align-content: center;
    gap: 5px;
 }
 
@@ -114,7 +116,7 @@ header nav {
    height: 30px;
    width: 100%;
    background: rgb(0, 132, 255);
-   border-radius: 50px;
+   border-radius: 100px;
    border: none;
    color: aliceblue;
    padding: 5px 20px;
@@ -133,6 +135,7 @@ section {
    display: grid;
    grid-template-columns: 1fr 300px;
    background: rgb(173, 202, 209);
+   box-shadow: 0px 1px 5px rgb(91, 131, 141) inset;
    height: auto;
 }
 section h3{
