--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,26 +2,43 @@
   font-family: 'Raleway', sans-serif;
 }
 
-body {
+/* body {
   margin: 0;
   padding: 0;
   width: 100%;
   display: grid;
   grid-template-columns: 1fr 4fr;
-}
+} */
 
 .vertical_links {
   box-sizing: border-box;
   background: rgb(2, 108, 170);
   color: white;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 20%;
+  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: left;
 }
 
+main {
+   position: absolute;
+   right: 0;
+   top: 0;
+   margin-right: 0;
+   width: 80%;
+}
 .menu_icone{
   display: flex;
   align-items: center;
+}
+
+.links ul li:hover,
+.features ul li:hover {
+   padding-left: 15px;
 }
 
 
@@ -85,6 +102,7 @@ header nav {
   align-items: center;
 }
 
+
 .profile_picture {
   margin: auto 10px;
 }
@@ -93,6 +111,10 @@ header nav {
   width: 40px;
   height: 40px;
   border-radius: 50px;
+}
+
+.profile_picture img:hover {
+  box-shadow: 1px 1px 10px rgb(0, 84, 99);
 }
 
 .hero {
@@ -121,6 +143,13 @@ header nav {
    color: aliceblue;
    padding: 5px 20px;
    text-align: center;
+}
+
+.actions button:hover {
+   /* box-shadow: 1px 1px 20px rgb(173, 202, 209); */
+   font-size: 17px;
+   padding: 4px 15px;
+   background: rgb(173, 202, 209);
 }
 
 .profile img {
