--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -163,8 +163,8 @@ header nav {
 
 section {
    display: grid;
-   grid-template-columns: 1fr 250px;
-   background: rgb(173, 202, 209);
+   grid-template-columns: 1fr 300px;
+   background: rgb(223, 223, 223);
    box-shadow: 0px 1px 5px rgb(91, 131, 141) inset;
    height: auto;
    box-sizing: border-box;
@@ -177,18 +177,21 @@ section h3{
 /* anouncement */
 
 
-.anouncement {
+.anouncement,
+.treding {
   width: 100%;
   margin-top: 20px;
   padding: 5px;
   box-sizing: border-box;
 }
-.anouncement > h3 {
+.anouncement > h3,
+.treding > h3 {
    margin: 10px auto 10px 0px;
    color: rgb(2, 108, 170);;
 }
 
-.anouncement > article {
+.anouncement > article,
+.treding > article {
    width: 100%;
    padding: 10px;
    margin-top: 5px;
@@ -198,9 +201,27 @@ section h3{
    font-size: 10px;
 }
 
+.treding article{
+   display: grid;
+   grid-template-columns: 1fr;
+}
+
+.person {
+   display: grid;
+   grid-template-columns: 1fr 2fr;
+} 
+
+.person img {
+   height: 50px;
+   width: 50px;
+   border-radius: 50px;
+}
+
 .part {
    margin-bottom: 20px;
 }
+
+
 
 .divider {
    width: 80%;
@@ -215,7 +236,7 @@ section h3{
    color: rgb(2, 108, 170);
 }
 .projects_items {
-   background: rgb(173, 202, 209);
+   background: rgb(223, 223, 223);
    width: 100%;
    padding: 10px;
    display: grid;
