--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -169,6 +169,8 @@ section {
    height: auto;
    box-sizing: border-box;
    gap: 10px;
+   padding-right: 20px;
+   padding-bottom: 20px;
 }
 section h3{
    padding-left: 20px;
@@ -196,11 +198,14 @@ section h3{
    padding: 10px;
    margin-top: 5px;
    box-sizing: border-box;
-   background: aliceblue;
+   background: white;
    border-radius: 10px;
-   font-size: 10px;
+   font-size: 14px;
 }
-
+.anouncement > article p,
+.treding > article  p{
+   color: gray;
+}
 .treding article{
    display: grid;
    grid-template-columns: 1fr;
@@ -215,6 +220,7 @@ section h3{
    height: 50px;
    width: 50px;
    border-radius: 50px;
+   box-shadow: 1px 0px 5px #a5a5a5;
 }
 
 .part {
